# weather_api_rust

./: .gitignore  CLAUDE.md  Cargo.toml  MCP_SETUP.md  README.md  examples.sh  index.html  mcp_stdio_bridge.py
src/: client.rs  mcp_api.rs  server.rs
